Changes since 1.0b2:

1. Added call to SizeJavaControl() when processing window size changes. This causes the applet
to be correctly resized before calling MoveAndClipJavaControl().

Changes since 1.0b1:

1. Repaired Security Context code that was broken by the checkin for bug 124042. This code now
uses standard character strings instead of Mozilla string classes.

2. Fixed code that was causing recursive painting calls.

Changes since 1.0d8:

1. Unescape file:// URLs when processing them. This allows us to launch local applets when there
is a space in the pathname leading to the applet (i.e. "/Volume/Applet Folder/applet").

Changes since 1.0d7:

1. Added support for relative height and width. This fixes problems with apples failing to load
because their height or width was specified as a percentage value.

2. Removed checks for zero height and width when instantiating the applet. This was keeping
some applets from being created.

3. Fixed Unicode to UTF-8 conversion on strings that were being passed to the status bar.

Changes since 1.0d6:

1. Using cfref template class to simplify and guard releases of CFTypeRef objects. This fixes
several crashing bugs.

Changes since 1.0d5:

1. Converting between HFS+ paths POSIX paths when processing URLs. This fixes bugzilla bug #108519
and addresses a mismatch between the way Mozilla (FizzillaCFM) and Java represent paths. Mozilla
uses HFS+ file paths, and simply converts them to URLs with the same path elements. Java uses the
POSIX representation, where the boot volume is simply "/" and all other volumes appear under
"/Volumes". The workaround code is a little messy, and is only necessary for file: URLs.

2. Added NULL check to showDocumentCallback as a workaround for bug #108054. For some strange reason,
url is NULL when that applet calls getAppletContext().showDocument(url, "_blank").

Changes since 1.0d4:

1. Need an applet object for LiveConnect. Is it available? Doing a little digging,